--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.40.0",
     "connect-mongo": "^5.0.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
@@ -20,6 +21,7 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "passport": "^0.5.3",
     "passport-local": "^1.0.0",
