--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "react": "react-scripts start"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.40.0",
     "connect-mongo": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -25,6 +28,7 @@
     "nodemon": "^3.0.1",
     "passport": "^0.5.3",
     "passport-local": "^1.0.0",
+    "react-scripts": "^5.0.1",
     "validator": "^13.11.0"
   }
 }
